# multimeter

./: Building the project.md  Building the project_Qt.md  CMakeLists.txt  Readme.md  Structure.md
QtClient/: CMakeLists.txt  Readme.md  main.qml  resources.qrc
QtClient/src/: main.cpp  qt_client.cpp  qt_client.h
_common/: config.h  logger.cpp  logger.h  my_tools.cpp  my_tools.h
client/: CMakeLists.txt  Readme.md  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  analog_input.cpp  analog_input.h  channel.cpp  channel.h  channel_controller.cpp  channel_controller.h  channel_factory.h  command_factory.h  commands.h  main.cpp  multimeter.cpp  multimeter.h  ranges.cpp  ranges.h  task_pool.cpp  task_pool.h
